--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,13 +17,48 @@
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
-        <script src="src/modules/cities/festivales.mod.js" type="text/javascript"></script>
-        <script src="src/modules/cities/festivales.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/festivales/festivales.mod.js" type="text/javascript"></script>
+        <script src="src/modules/festivales/festivales.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
-        <script src="src/modules/cities/criticos.mod.js" type="text/javascript"></script>
-        <script src="src/modules/cities/criticos.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/criticos/criticos.mod.js" type="text/javascript"></script>
+        <script src="src/modules/criticos/criticos.ctrl.js" type="text/javascript"></script>
 
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/abonos/abonos.mod.js" type="text/javascript"></script>
+        <script src="src/modules/abonos/abonos.ctrl.js" type="text/javascript"></script>
+
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/boletas/boletas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/boletas/boletas.ctrl.js" type="text/javascript"></script>
+        
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/calificaciones/calificaciones.mod.js" type="text/javascript"></script>
+        <script src="src/modules/calificaciones/calificaciones.ctrl.js" type="text/javascript"></script>
+        
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/clientes/clientes.mod.js" type="text/javascript"></script>
+        <script src="src/modules/clientes/clientes.ctrl.js" type="text/javascript"></script>
+
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/funciones/funciones.mod.js" type="text/javascript"></script>
+        <script src="src/modules/funciones/funciones.ctrl.js" type="text/javascript"></script>
+
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/película/pelicula.mod.js" type="text/javascript"></script>
+        <script src="src/modules/película/pelicula.ctrl.js" type="text/javascript"></script>
+
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/sala/sala.mod.js" type="text/javascript"></script>
+        <script src="src/modules/sala/sala.ctrl.js" type="text/javascript"></script>
+
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/sillas/sillas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/sillas/sillas.ctrl.js" type="text/javascript"></script>
+
+        <script src="src/app.js" type="text/javascript"></script>  
+        <script src="src/modules/teatros/teatros.mod.js" type="text/javascript"></script>
+        <script src="src/modules/teatros/teatros.ctrl.js" type="text/javascript"></script>
 
 
     </head>
