--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,10 +70,10 @@
                     <a class="dropdown-toggle" data-toggle="dropdown">SourceTeam
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a ui-sref="festivalesCreate">Create</a></li>    
-                        <li><a ui-sref="festivalesList">List</a></li>
-                        <li><a ui-sref="criticosCreate">Create</a></li>    
-                        <li><a ui-sref="criticosList">List</a></li>
+                        <li><a ui-sref="festivalesCreate">Crear festival</a></li>    
+                        <li><a ui-sref="festivalesList">Lista festivales</a></li>
+                        <li><a ui-sref="criticosCreate">Crear critico</a></li>    
+                        <li><a ui-sref="criticosList">Lista criticos</a></li>
                     </ul>
                 </li>        
             </ul>
