--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,6 +74,24 @@
                         <li><a ui-sref="festivalesList">Lista festivales</a></li>
                         <li><a ui-sref="criticosCreate">Crear critico</a></li>    
                         <li><a ui-sref="criticosList">Lista criticos</a></li>
+                        <li><a ui-sref="abonosCreate">Crear abono</a></li>    
+                        <li><a ui-sref="abonosList">Lista abonos</a></li>
+                        <li><a ui-sref="boletasCreate">Crear boleta</a></li>    
+                        <li><a ui-sref="boletasList">Lista boletas</a></li>
+                        <li><a ui-sref="calificacionesCreate">Crear calificacion</a></li>    
+                        <li><a ui-sref="calificacionesList">Lista claificaciones</a></li>
+                        <li><a ui-sref="clientezCreate">Crear cliente</a></li>    
+                        <li><a ui-sref="clientesList">Lista clientes</a></li>
+                        <li><a ui-sref="funcionesCreate">Crear función</a></li>    
+                        <li><a ui-sref="funcionesList">Lista funciones</a></li>
+                        <li><a ui-sref="peliculasCreate">Crear pelicula</a></li>    
+                        <li><a ui-sref="peliculasList">Lista películas</a></li>
+                        <li><a ui-sref="salasCreate">Crear sala</a></li>    
+                        <li><a ui-sref="salasList">Lista salas</a></li>
+                        <li><a ui-sref="sillasCreate">Crear silla</a></li>    
+                        <li><a ui-sref="sillasList">Lista sillas</a></li>
+                        <li><a ui-sref="teatrosCreate">Crear teatro</a></li>    
+                        <li><a ui-sref="teatrosList">Lista teatros</a></li>
                     </ul>
                 </li>        
             </ul>
