--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,8 +45,8 @@
         <script src="src/modules/funciones/funciones.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
-        <script src="src/modules/película/pelicula.mod.js" type="text/javascript"></script>
-        <script src="src/modules/película/pelicula.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/pelicula/pelicula.mod.js" type="text/javascript"></script>
+        <script src="src/modules/pelicula/pelicula.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
         <script src="src/modules/sala/sala.mod.js" type="text/javascript"></script>
