--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,12 +46,12 @@
         <script src="src/modules/funciones/funciones.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
-        <script src="src/modules/pelicula/pelicula.mod.js" type="text/javascript"></script>
+        <script src="src/modules/peliculas/pelicula.mod.js" type="text/javascript"></script>
         <script src="src/modules/pelicula/pelicula.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
-        <script src="src/modules/sala/sala.mod.js" type="text/javascript"></script>
-        <script src="src/modules/sala/sala.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/salas/sala.mod.js" type="text/javascript"></script>
+        <script src="src/modules/salas/sala.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
         <script src="src/modules/sillas/sillas.mod.js" type="text/javascript"></script>
