--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,7 +75,7 @@
                         <li><a ui-sref="festivalesList">Lista festivales</a></li>
                         <li><a ui-sref="criticosCreate">Crear critico</a></li>    
                         <li><a ui-sref="criticosList">Lista criticos</a></li>
-                        <li><a ui-sref="abonosCreate">Crear abono</a></li>    
+                        <li><a ui-sref="abonoCreate">Crear abono</a></li>    
                         <li><a ui-sref="abonosList">Lista abonos</a></li>
                         <li><a ui-sref="boletasCreate">Crear boleta</a></li>    
                         <li><a ui-sref="boletasList">Lista boletas</a></li>
