--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,8 +50,8 @@
         <script src="src/modules/peliculas/peliculas.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
-        <script src="src/modules/salas/sala.mod.js" type="text/javascript"></script>
-        <script src="src/modules/salas/sala.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/salas/salas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/salas/salas.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script>  
         <script src="src/modules/sillas/sillas.mod.js" type="text/javascript"></script>
