--- a/src/main/webapp/src/modules/salas/salas.create.html
+++ b/src/main/webapp/src/modules/salas/salas.create.html
@@ -1,22 +1,25 @@
-
 <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
-    <form novalidate name="form" id="pelicula-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
+    <form novalidate name="form" id="sala-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
         
         <div ng-messages="form.$error">
             <div ng-message="required">Llene los campos requeridos</div>
         </div>
    
         <fieldset>
-            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.id"/>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="name" class="col-md-2 control-label">Nombre</label>
                 <div class="col-md-10">
-                    <input id="name" name="name" class="form-control" type="text" ng-model="currentRecord.name" ng-init="currentRecord.name" required />
+                    <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.name" ng-init="currentRecord.name" required />
+                </div>
+                <label for="numSala" class="col-md-2 control-label">Numero de sala</label>
+                <div class="col-md-10">
+                    <input id="numSala" numSala="numSala" class="form-control" type="text" ng-model="currentRecord.numSala" ng-init="currentRecord.numSala" required />
                 </div>
             </div>
-            <button type="button" ui-sref='peliculaList'>Cancel</button>
+            <button type="button" ui-sref='salaList'>Cancel</button>
             <button type="submit" >Save</button>    
         </fieldset>
     </form>
 </div>
+
