--- a/src/main/webapp/src/modules/salas/salas.create.html
+++ b/src/main/webapp/src/modules/salas/salas.create.html
@@ -17,7 +17,7 @@
                     <input id="numSala" numSala="numSala" class="form-control" type="text" ng-model="currentRecord.numSala" ng-init="currentRecord.numSala" required />
                 </div>
             </div>
-            <button type="button" ui-sref='salaList'>Cancel</button>
+            <button type="button" ui-sref='salasList'>Cancel</button>
             <button type="submit" >Save</button>    
         </fieldset>
     </form>
