--- a/src/main/webapp/src/modules/peliculas/peliculas.create.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.create.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
-    <form novalidate name="form" id="pelicula-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
+    <form novalidate name="form" id="festivales-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
         
         <div ng-messages="form.$error">
             <div ng-message="required">Llene los campos requeridos</div>
@@ -34,7 +34,7 @@
                     <input id="pais" pais="pais" class="form-control" type="text" ng-model="currentRecord.pais" ng-init="currentRecord.pais" required />
                 </div>
             </div>
-            <button type="button" ui-sref='peliculaList'>Cancel</button>
+            <button type="button" ui-sref='peliculasList'>Cancel</button>
             <button type="submit" >Save</button>    
         </fieldset>
     </form>
