--- a/src/main/webapp/src/modules/calificaciones/calificaciones.create.html
+++ b/src/main/webapp/src/modules/calificaciones/calificaciones.create.html
@@ -4,7 +4,8 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div class="col-md-6 well">
+<html>
+ <div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
     <form novalidate name="form" id="festivales-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
         
@@ -14,17 +15,17 @@ and open the template in the editor.
    
         <fieldset>
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
-                <label for="cliente" class="col-md-2 control-label">Cliente</label>
+                <label for="funcion" class="col-md-2 control-label">Funcion</label>
                 <div class="col-md-10">
-                    <input id="cliente" cliente="cliente" class="form-control" type="text" ng-model="currentRecord.cliente" ng-init="currentRecord.cliente" required />
+                    <input id="funcion" funcion="funcion" class="form-control" type="text" ng-model="currentRecord.funcion" ng-init="currentRecord.funcion" required />
                 </div>
-                          <label for="id" class="col-md-2 control-label">Id del abono</label>
+                <label for="critico" class="col-md-2 control-label">Critico</label>
                 <div class="col-md-10">
-                    <input id="id" idAbono="id" class="form-control" type="text" ng-model="currentRecord.id" ng-init="currentRecord.id" required />
+                    <input id="critico" critico="critico" class="form-control" type="text" ng-model="currentRecord.critico" ng-init="currentRecord.critico" required />
                 </div>
-                
+
             </div>
-            <button type="button" ui-sref='abonosList'>Cancel</button>
+            <button type="button" ui-sref='calificacionesList'>Cancel</button>
             <button type="submit" >Save</button>    
         </fieldset>
     </form>
