--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,38 +64,123 @@
 
     </head>
     <body style="padding-top: 20px;">
-        <div class="container-fluid" class="col-md-12">   
-            <h3>Cine</h3>
-            <ul class="nav nav-tabs">            
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">SourceTeam
-                        <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a ui-sref="festivalesCreate">Crear festival</a></li>    
-                        <li><a ui-sref="festivalesList">Lista festivales</a></li>
-                        <li><a ui-sref="criticosCreate">Crear critico</a></li>    
-                        <li><a ui-sref="criticosList">Lista criticos</a></li>
-                        <li><a ui-sref="abonosCreate">Crear abono</a></li>    
-                        <li><a ui-sref="abonosList">Lista abonos</a></li>
-                        <li><a ui-sref="boletasCreate">Crear boleta</a></li>    
-                        <li><a ui-sref="boletasList">Lista boletas</a></li>
-                        <li><a ui-sref="calificacionesCreate">Crear calificacion</a></li>    
-                        <li><a ui-sref="calificacionesList">Lista claificaciones</a></li>
-                        <li><a ui-sref="clientezCreate">Crear cliente</a></li>    
-                        <li><a ui-sref="clientesList">Lista clientes</a></li>
-                        <li><a ui-sref="funcionesCreate">Crear función</a></li>    
-                        <li><a ui-sref="funcionesList">Lista funciones</a></li>
-                        <li><a ui-sref="peliculasCreate">Crear pelicula</a></li>    
-                        <li><a ui-sref="peliculasList">Lista películas</a></li>
-                        <li><a ui-sref="salasCreate">Crear sala</a></li>    
-                        <li><a ui-sref="salasList">Lista salas</a></li>
-                        <li><a ui-sref="sillasCreate">Crear silla</a></li>    
-                        <li><a ui-sref="sillasList">Lista sillas</a></li>
-                        <li><a ui-sref="teatrosCreate">Crear teatro</a></li>    
-                        <li><a ui-sref="teatrosList">Lista teatros</a></li>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div id="navbardemo" class="navbar-collapse collapse" aria-expanded="false" style="height:1px;float:left;">
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Festival</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear festival</a></li>    
+                                <li><a ui-sref="festivalesList">Lista festivales</a></li>
+                            </ul>
+                        </li> 
                     </ul>
-                </li>        
-            </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Críticos</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear crítico</a></li>    
+                                <li><a ui-sref="festivalesList">Lista críticos</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Abonos</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear abono</a></li>    
+                                <li><a ui-sref="festivalesList">Lista abonos</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Boletas</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear boleta</a></li>    
+                                <li><a ui-sref="festivalesList">Lista boletas</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown" style="width: 110%">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Calificaciones</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear calificación</a></li>    
+                                <li><a ui-sref="festivalesList">Lista calificaciones</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Clientes</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear cliente</a></li>    
+                                <li><a ui-sref="festivalesList">Lista clientes</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Funciones</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear función</a></li>    
+                                <li><a ui-sref="festivalesList">Lista funciones</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Peliculas</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear pelíula</a></li>    
+                                <li><a ui-sref="festivalesList">Lista películas</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Salas</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear sala</a></li>    
+                                <li><a ui-sref="festivalesList">Lista salas</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Sillas</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear silla</a></li>    
+                                <li><a ui-sref="festivalesList">Lista sillas</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Teatros</font>
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a ui-sref="festivalesCreate">Crear teatro</a></li>    
+                                <li><a ui-sref="festivalesList">Lista teatros</a></li>
+                            </ul>
+                        </li> 
+                    </ul>
+                </div> 
+            </div>
+        </nav>
+        <div class="container-fluid" class="col-md-12">   
             <div ui-view="mainView">
             </div>
         </div>
