--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,8 +82,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Críticos</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear crítico</a></li>    
-                                <li><a ui-sref="festivalesList">Lista críticos</a></li>
+                                <li><a ui-sref="criticosCreate">Crear crítico</a></li>    
+                                <li><a ui-sref="criticosList">Lista críticos</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -92,8 +92,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Abonos</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear abono</a></li>    
-                                <li><a ui-sref="festivalesList">Lista abonos</a></li>
+                                <li><a ui-sref="abonosCreate">Crear abono</a></li>    
+                                <li><a ui-sref="abonosList">Lista abonos</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -102,8 +102,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Boletas</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear boleta</a></li>    
-                                <li><a ui-sref="festivalesList">Lista boletas</a></li>
+                                <li><a ui-sref="boletasCreate">Crear boleta</a></li>    
+                                <li><a ui-sref="boletasList">Lista boletas</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -112,8 +112,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Calificaciones</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear calificación</a></li>    
-                                <li><a ui-sref="festivalesList">Lista calificaciones</a></li>
+                                <li><a ui-sref="calificacionesCreate">Crear calificación</a></li>    
+                                <li><a ui-sref="calificacionesList">Lista calificaciones</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -122,8 +122,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Clientes</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear cliente</a></li>    
-                                <li><a ui-sref="festivalesList">Lista clientes</a></li>
+                                <li><a ui-sref="clientesCreate">Crear cliente</a></li>    
+                                <li><a ui-sref="clientesList">Lista clientes</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -132,8 +132,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Funciones</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear función</a></li>    
-                                <li><a ui-sref="festivalesList">Lista funciones</a></li>
+                                <li><a ui-sref="funcionesCreate">Crear función</a></li>    
+                                <li><a ui-sref="funcionesList">Lista funciones</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -142,8 +142,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Peliculas</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear pelíula</a></li>    
-                                <li><a ui-sref="festivalesList">Lista películas</a></li>
+                                <li><a ui-sref="pelicuasCreate">Crear pelíula</a></li>    
+                                <li><a ui-sref="pelicuasList">Lista películas</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -152,8 +152,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Salas</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear sala</a></li>    
-                                <li><a ui-sref="festivalesList">Lista salas</a></li>
+                                <li><a ui-sref="salasCreate">Crear sala</a></li>    
+                                <li><a ui-sref="salasList">Lista salas</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -162,8 +162,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Sillas</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear silla</a></li>    
-                                <li><a ui-sref="festivalesList">Lista sillas</a></li>
+                                <li><a ui-sref="silasCreate">Crear silla</a></li>    
+                                <li><a ui-sref="silasList">Lista sillas</a></li>
                             </ul>
                         </li> 
                     </ul>
@@ -172,8 +172,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Teatros</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="festivalesCreate">Crear teatro</a></li>    
-                                <li><a ui-sref="festivalesList">Lista teatros</a></li>
+                                <li><a ui-sref="teatrosCreate">Crear teatro</a></li>    
+                                <li><a ui-sref="teatrosList">Lista teatros</a></li>
                             </ul>
                         </li> 
                     </ul>
