--- a/src/main/webapp/src/modules/calificaciones/calificaciones.create.html
+++ b/src/main/webapp/src/modules/calificaciones/calificaciones.create.html
@@ -4,8 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
- <div class="col-md-6 well">
+<div class="col-md-6 well">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
     <form novalidate name="form" id="festivales-form" role="form" ng-submit="form.$valid && ctrl.saveRecord(currentRecord.id)">
         
@@ -19,11 +18,11 @@ and open the template in the editor.
                 <div class="col-md-10">
                     <input id="funcion" funcion="funcion" class="form-control" type="text" ng-model="currentRecord.funcion" ng-init="currentRecord.funcion" required />
                 </div>
-                <label for="critico" class="col-md-2 control-label">Critico</label>
+                          <label for="critico" class="col-md-2 control-label">Nombre Critico</label>
                 <div class="col-md-10">
                     <input id="critico" critico="critico" class="form-control" type="text" ng-model="currentRecord.critico" ng-init="currentRecord.critico" required />
                 </div>
-
+                
             </div>
             <button type="button" ui-sref='calificacionesList'>Cancel</button>
             <button type="submit" >Save</button>    
