--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -142,8 +142,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Peliculas</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="pelicuasCreate">Crear pelíula</a></li>    
-                                <li><a ui-sref="pelicuasList">Lista películas</a></li>
+                                <li><a ui-sref="peliculasCreate">Crear pelíula</a></li>    
+                                <li><a ui-sref="peliculasList">Lista películas</a></li>
                             </ul>
                         </li> 
                     </ul>
