--- a/src/main/webapp/src/modules/peliculas/peliculas.create.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.create.html
@@ -11,7 +11,7 @@
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="name" class="col-md-2 control-label">Nombre</label>
                 <div class="col-md-10">
-                    <input id="name" name="name" class="form-control" type="text" ng-model="currentRecord.name" ng-init="currentRecord.name" required />
+                    <input id="nombre" nombre="nombre" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
                 </div>
                 <label for="anuncio" class="col-md-2 control-label">Anuncio</label>
                 <div class="col-md-10">
