--- a/src/main/webapp/src/modules/salas/salas.list.html
+++ b/src/main/webapp/src/modules/salas/salas.list.html
@@ -13,7 +13,7 @@
 
                 <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="salasEdit({salaNum: record.num})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
-                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
+                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="salasDelete({salaNum: record.num})"><span class="glyphicon glyphicon-minus"></span> Remove</button>
 
                 </td>
             </tr>
