--- a/src/main/webapp/src/modules/peliculas/peliculas.list.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.list.html
@@ -9,7 +9,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-name">{{record.name}}</td>
+                <td id="{{$index}}-name">{{record.nombre}}</td>
 
                 <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="peliculasEdit({peliculaNombre: record.nombre})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
