Create festivales, critico

--- a/src/main/webapp/src/modules/festivales/festivales.list.html
+++ b/src/main/webapp/src/modules/festivales/festivales.list.html
@@ -9,10 +9,10 @@
         </thead>
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-name">{{record.name}}</td>
+                <td id="{{$index}}-name">{{record.nombre}}</td>
 
                 <td>
-                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="festivalEdit({festivalNombre: record.nombre})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="festivalesEdit({festivalNombre: record.nombre})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
                     <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
 
                 </td>
