--- a/src/main/webapp/src/modules/teatros/teatros.list.html
+++ b/src/main/webapp/src/modules/teatros/teatros.list.html
@@ -8,7 +8,7 @@
         </thead>                    
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-name">{{record.name}}</td>
+                <td id="{{$index}}-name">{{record.nombre}}</td>
                 <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="teatroEdit({teatroNombre: record.nombre})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
                     <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
