modificaion de los html de sillas y ctls.js modificacion del index.html por error en llamada a sillaCreate

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -162,8 +162,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Sillas</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="silasCreate">Crear silla</a></li>    
-                                <li><a ui-sref="silasList">Lista sillas</a></li>
+                                <li><a ui-sref="sillaCreate">Crear silla</a></li>    
+                                <li><a ui-sref="sillasList">Lista sillas</a></li>
                             </ul>
                         </li> 
                     </ul>
