--- a/src/main/webapp/src/modules/abonos/abonos.list.html
+++ b/src/main/webapp/src/modules/abonos/abonos.list.html
@@ -1,20 +1,25 @@
- 
-<div class="container-fluid">
-       
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+
+<div class="container-fluid" >
+   
     <table class="table table-striped" class="col-md-4">
         <thead>
             <tr>
-                <th>Critico</th>        
-                <th>Abono</th>
+                <th>Name</th>        
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-id">{{record.id}}</td>
-                <td id="{{$index}}-critico">{{record.critico.name}}</td>
+                <td id="{{$index}}-name">{{record.name}}</td>
 
                 <td>
-                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="abonosEdit({abonoId record.num})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="abonosEdit({idAbono record.num})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
                     <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
 
                 </td>
