Boleta funcionando correctamente

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -102,7 +102,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Boletas</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="boletasCreate">Crear boleta</a></li>    
+                                <li><a ui-sref="boletaCreate">Crear boleta</a></li>    
                                 <li><a ui-sref="boletasList">Lista boletas</a></li>
                             </ul>
                         </li> 
