Al fín salas y películas perfectas!!

--- a/src/main/webapp/src/modules/peliculas/peliculas.create.html
+++ b/src/main/webapp/src/modules/peliculas/peliculas.create.html
@@ -31,7 +31,7 @@
                 </div>
                 <label for="duracion" class="col-md-2 control-label">Duracion</label>
                 <div class="col-md-10">
-                    <input id="name" name="duracion" class="form-control" type="text" ng-model="currentRecord.duracion" ng-init="currentRecord.duracion" required />
+                    <input id="name" name="duracion" class="form-control" type="number" ng-model="currentRecord.duracion" ng-init="currentRecord.duracion" required />
                 </div>
                 <label for="pais" class="col-md-2 control-label">Pais</label>
                 <div class="col-md-10">
