--- a/src/main/webapp/src/modules/salas/salas.create.html
+++ b/src/main/webapp/src/modules/salas/salas.create.html
@@ -12,19 +12,19 @@
                 <div class="col-md-10">
                     <input id="id" id="id" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" readonly="readonly" />
                 </div>
-                <label for="numSala" class="col-md-2 control-label">Numero de sala</label>
+                <label for="numSala" class="col-md-2 control-label">Numero sala</label>
                 <div class="col-md-10">
                     <input id="numSala" numSala="numSala" class="form-control" type="number" ng-model="currentRecord.numSala" ng-init="currentRecord.numSala" required />
                 </div>
-                <label for="numSillas" class="col-md-2 control-label">Numero de sillas</label>
+                <label for="numSillas" class="col-md-2 control-label">Numero sillas</label>
                 <div class="col-md-10">
                     <input id="numSillas" numSillas="numSillas" class="form-control" type="number" ng-model="currentRecord.numSillas" ng-init="currentRecord.numSillas" required />
                 </div>
-                <label for="numSillasGenerales" class="col-md-2 control-label">Numero de sillas generales</label>
+                <label for="numSillasGenerales" class="col-md-2 control-label">Numero sillas G</label>
                 <div class="col-md-10">
                     <input id="numSillasGenerales" numSillasGenerales="numSillasGenerales" class="form-control" type="number" ng-model="currentRecord.numSillasGenerales" ng-init="currentRecord.numSillasGenerales" required />
                 </div>
-                <label for="numSillasPreferenciales" class="col-md-2 control-label">Numero de sillas preferenciales</label>
+                <label for="numSillasPreferenciales" class="col-md-2 control-label">Numero sillas P</label>
                 <div class="col-md-10">
                     <input id="numSillasPreferenciales" numSillasPreferenciales="numSillasPreferenciales" class="form-control" type="number" ng-model="currentRecord.numSillasPreferenciales" ng-init="currentRecord.numSillasPreferenciales" required />
                 </div>
