--- a/src/main/webapp/src/modules/festivales/festivales.list.html
+++ b/src/main/webapp/src/modules/festivales/festivales.list.html
@@ -3,13 +3,20 @@
     <table class="table table-striped" class="col-md-4">
         <thead>
             <tr>
+                <th>Id</th>
                 <th>Name</th>        
+                <th>Duración</th>
+                <th>Patrocinador</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="record in records">
-                <td id="{{$index}}-name">{{record.nombre}}</td>
+                <td id="{{$index}}-id">{{record.id}}</td>
+                <td id="{{$index}}-nombre">{{record.nombre}}</td>
+                <td id="{{$index}}-duracion">{{record.duracion}}</td>
+                <td id="{{$index}}-patrocinador">{{record.patrocinador}}</td>
+                
 
                 <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="festivalesEdit({festivalId: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
