Cliente funcinando correctamente, arreglo de errores en el index y archivos de cities borrados

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -122,7 +122,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Clientes</font>
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="clientesCreate">Crear cliente</a></li>    
+                                <li><a ui-sref="clienteCreate">Crear cliente</a></li>    
                                 <li><a ui-sref="clientesList">Lista clientes</a></li>
                             </ul>
                         </li> 
