--- a/src/main/webapp/src/modules/boletas/boletas.list.html
+++ b/src/main/webapp/src/modules/boletas/boletas.list.html
@@ -10,7 +10,7 @@
         <tbody>
             <tr ng-repeat="record in records">
                 <td id="{{$index}}-id">{{record.id}}</td>
-                <td id="{{$index}}-fila">{{record.precio}}</td>
+                <td id="{{$index}}-precio">{{record.precio}}</td>
 
                 <td>
                     <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ui-sref="boletaEdit({boletaId: record.id})"><span class="glyphicon glyphicon-edit"></span> Edit</button>
