--- a/src/main/webapp/src/modules/funciones/funciones.create.html
+++ b/src/main/webapp/src/modules/funciones/funciones.create.html
@@ -15,7 +15,7 @@
             <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
                 <label for="name" class="col-md-2 control-label">Fecha</label> 
                 <div class="col-md-10"> 
-                    <input id="fecha" name="name" class="form-control" type="date" ng-model="currentRecord.dia" ng-init="currentRecord.dia" required />
+                    <input id="fecha" name="name" class="form-control" type="datetime" ng-model="currentRecord.dia" ng-init="currentRecord.dia" required />
                 </div>
             </div>
             <input id="id" class="form-control" type="hidden" ng-model="currentRecord.precio"/>
