Dependencia Critico-Festival

--- a/src/main/webapp/src/modules/criticos/criticos.create.html
+++ b/src/main/webapp/src/modules/criticos/criticos.create.html
@@ -23,6 +23,10 @@
                 <div class="col-md-10">
                     <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
                 </div>
+                <label for="festival" class="col-md-2 control-label">Festival</label>
+                <div class="col-md-10">
+                    <select id="festival" name="festival" ng-options="rc.nombre for rc in festivales track by rc.id" class="form-control" type="text" ng-model="currentRecord.festival" ></select>
+                </div>
             <button type="button" ui-sref='criticosList'>Cancel</button>
             <button type="submit" >Save</button>    
         </fieldset>
