--- a/src/main/webapp/src/modules/festivales/festivales.list.html
+++ b/src/main/webapp/src/modules/festivales/festivales.list.html
@@ -26,5 +26,6 @@
             </tr>
         </tbody>
     </table>
+    <button class="btn btn-default" ui-sref="festivalesCreate">Crear festival</button>
 </div>
 
