--- a/src/main/webapp/src/modules/criticos/criticos.create.html
+++ b/src/main/webapp/src/modules/criticos/criticos.create.html
@@ -4,27 +4,27 @@
     <form novalidate name="form" id="festivales-form" role="form" ng-submit="ctrl.saveRecord(currentRecord.id)">
         
         <div ng-messages="form.$error">
-            <div ng-message="required">Llene los campos requeridos</div>
+            <div ng-message="required" style="margin-bottom: 10px">Llene los campos requeridos</div>
         </div>
         <fieldset>
                 <label for="name" class="col-md-2 control-label">Id</label>
-                <div class="col-md-10">
+                <div class="col-md-10" style="margin-bottom: 10px">
                     <input id="id" readonly="readonly" name="name" class="form-control" type="number" ng-model="currentRecord.id" ng-init="currentRecord.id" required />
                 </div>
                 <label for="name" class="col-md-2 control-label">Credencial</label>
-                <div class="col-md-10">
+                <div class="col-md-10" style="margin-bottom: 10px">
                     <input id="anuncio" name="name" class="form-control" type="number" ng-model="currentRecord.credencial" ng-init="currentRecord.credencial" required />
                 </div>
                 <label for="name" class="col-md-2 control-label">Duración</label>
-                <div class="col-md-10">
+                <div class="col-md-10" style="margin-bottom: 10px">
                     <input id="anuncio" name="name" class="form-control" type="number" ng-model="currentRecord.duracion" ng-init="currentRecord.duracion" required />
                 </div>
                 <label for="name" class="col-md-2 control-label">Nombre</label>
-                <div class="col-md-10">
+                <div class="col-md-10" style="margin-bottom: 10px">
                     <input id="anuncio" name="name" class="form-control" type="text" ng-model="currentRecord.nombre" ng-init="currentRecord.nombre" required />
                 </div>
                 <label for="festival" class="col-md-2 control-label">Festival</label>
-                <div class="col-md-10">
+                <div class="col-md-10" style="margin-bottom: 10px">
                     <select id="festival" name="festival" ng-options="rc.nombre for rc in festivales track by rc.id" class="form-control" type="text" ng-model="currentRecord.festival" ></select>
                 </div>
             <button type="button" ui-sref='criticosList'>Cancel</button>
