--- a/src/main/webapp/src/modules/criticos/criticos.list.html
+++ b/src/main/webapp/src/modules/criticos/criticos.list.html
@@ -26,5 +26,7 @@
             </tr>
         </tbody>
     </table>
+    <button class="btn btn-default" ui-sref="criticosCreate">Crear Crítico</button>
+
 </div>
 
