--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,26 +66,11 @@
                 </div> 
                 <div id="navbardemo" class="navbar-collapse collapse" aria-expanded="false" style="height:1px;float:left;">
                     <ul class="nav navbar-nav" style="margin-left: 0">
-                        <li><a ui-sref="festivalesList">Festivales</a></li>
-                    </ul>
-                                        <ul class="nav navbar-nav" style="margin-left: 0">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Boletas</font>
-                            <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a ui-sref="boletaCreate">Crear boleta</a></li>    
-                                <li><a ui-sref="boletasList">Lista boletas</a></li>
-                            </ul>
-                        </li> 
+                        <li><a ui-sref="festivalesList" style="color: white">Festivales</a></li>
                     </ul>
                     <ul class="nav navbar-nav" style="margin-left: 0">
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Clientes</font>
-                            <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a ui-sref="clienteCreate">Crear cliente</a></li>    
-                                <li><a ui-sref="clientesList">Lista clientes</a></li>
-                            </ul>
+                            <a ui-sref="clientesList" style="color: white">Clientes</a>
                         </li> 
                     </ul>
                     <ul class="nav navbar-nav" style="margin-left: 0">
@@ -110,32 +95,7 @@
                     </ul>
                     <ul class="nav navbar-nav" style="margin-left: 0">
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Salas</font>
-                            <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a ui-sref="salasCreate">Crear sala</a></li>    
-                                <li><a ui-sref="salasList">Lista salas</a></li>
-                            </ul>
-                        </li> 
-                    </ul>
-                    <ul class="nav navbar-nav" style="margin-left: 0">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Sillas</font>
-                            <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a ui-sref="sillaCreate">Crear silla</a></li>    
-                                <li><a ui-sref="sillasList">Lista sillas</a></li>
-                            </ul>
-                        </li> 
-                    </ul>
-                    <ul class="nav navbar-nav" style="margin-left: 0">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Teatros</font>
-                            <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a ui-sref="teatrosCreate">Crear teatro</a></li>    
-                                <li><a ui-sref="teatrosList">Lista teatros</a></li>
-                            </ul>
+                            <a ui-sref="teatrosList" style="color: white">Teatros</a>
                         </li> 
                     </ul>
                 </div> 
