Teatro-sala-silla  arreglado

--- a/src/main/webapp/src/modules/teatros/teatros.instance.html
+++ b/src/main/webapp/src/modules/teatros/teatros.instance.html
@@ -14,5 +14,6 @@
                     </div> <!-- /.container-fluid -->
                 </nav>
         <div ui-view="teatroInstanceView"> </div>
+        <div ui-view="childView"> </div>
     </div>
 </div>
