--- a/src/main/webapp/src/modules/salas/salas.instance.html
+++ b/src/main/webapp/src/modules/salas/salas.instance.html
@@ -7,7 +7,7 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
-                                <li><a ui-sref="sillas">Sillas</a></li>
+                                <li><a ui-sref="sillasList">Sillas</a></li>
                                
                             </ul>
                         </div> <!-- /.navbar-collapse -->
