Teatro-Funcion dependencia

--- a/src/main/webapp/src/modules/teatros/teatros.instance.html
+++ b/src/main/webapp/src/modules/teatros/teatros.instance.html
@@ -8,6 +8,7 @@
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="salasList">Salas</a></li>
+                                <li><a ui-sref="funcionesList">Funciones</a></li>
                                
                             </ul>
                         </div> <!-- /.navbar-collapse -->
